complete create Bar functionality

--- a/views/bars/index.ejs
+++ b/views/bars/index.ejs
@@ -1,12 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Bars</h1>
-</body>
-</html>
+<%- include('./../_partials/head') %>
+
+<h1>Bars</h1>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Style</th>
+    </tr>
+    <% bars.forEach(bar => { %>
+    <tr>
+        <td><%= bar.name %></td>
+        <td><%= bar.style %></td>
+        <td><a href="/bars/<%= bar.id %>/edit">Edit</a></td>
+        <td>
+            <form method="POST" action="/movies/<%= bar.id %>?_method=DELETE">
+                <button class="delete" type="submit">Delete</button>
+            </form>
+        </td>
+    </tr>
+    <% }); %>
+</table>
+<br>
+<a href="/bars/new">Add A Bar</a>
+
+<%- include('./../_partials/footer') %>
